Changed the LOGO

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ li.navbar_right {
 }
 
 .active {
-	background-color: #4CAF50;
+	background-color: #2A2A57;
 }
 
 li a.navbar, .dropbtn {
@@ -81,10 +81,13 @@ li.dropdown {
 
 /* Navigation Bar Logo */
 .navbar_logo {
-	float: none;
-	position: absolute;
 	display:inline-block; 
 	text-align: center;
+    float: none;
+    position: absolute;
+    padding-top: 4%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .logo{
@@ -94,7 +97,7 @@ li.dropdown {
 }
 
 .navbar_logo:hover .logo{
-	opacity: 0.5;
+	opacity: 0.7;
 }
 
 /* Navigation Bar Search */
