--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ li a.navbar, .dropbtn {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    font-weight: 300;
 }
 
 /* Navigation Bar Dropdown */
@@ -71,9 +72,11 @@ li.dropdown {
     text-decoration: none;
     display: block;
     text-align: left;
+    font-weight: 300;
 }
 
-.dropdown-content a:hover {background-color: #f1f1f1}
+.dropdown-content a:hover {
+    background-color: #f1f1f1}
 
 .dropdown:hover .dropdown-content {
     display: block;
@@ -105,6 +108,7 @@ input[type=text] {
     width: 130px;
     box-sizing: border-box;
     font-size: 16px;
+    font-weight: 300;
     border: 0;
     background-color: #333;
     padding: 14px 16px 14px 40px;
@@ -116,6 +120,7 @@ input[type=text] {
 ::placeholder{
 	color: white;
 	font-family: FontAwesome, 'Roboto', sans-serif;
+    font-weight: 300;
 }
 
 input[type=text]:focus {
