ADDed a CLASS NAME SEARCH IN EVERY HTML PAGE FOR THE SEARCH BAR

--- a/Style.css
+++ b/Style.css
@@ -106,7 +106,7 @@ li.dropdown {
 }
 
 /* Navigation Bar Search */
-input[type=text] {        
+.Search {        
     width: 130px;
     box-sizing: border-box;
     font-size: 16px;
