--- a/Style.css
+++ b/Style.css
@@ -225,7 +225,7 @@ td {
 
 
 /*--------------------------------------------------------------------------------------------*/
-/*----------------------------------------------Signin Page ----------------------------------*/
+/*---------------------------------------------- Login Page ----------------------------------*/
 
 #bodysignin
 {
