--- a/Style.css
+++ b/Style.css
@@ -263,7 +263,7 @@ td {
     height:10%;
     width:90%;
     border-radius:10px;
-    color:Black;
+    color:#A9A9A9;
     font-weight:Bold;
     font-size:150%;
     background-color:White;
