--- a/Style.css
+++ b/Style.css
@@ -139,6 +139,16 @@ input[type=text]:focus {
 
 
 /* --------------------------------------------------------------------------------------------- */
+/* ----------------------------------- Index Page ---------------------------------------------- */
+
+
+
+
+
+
+
+
+/* --------------------------------------------------------------------------------------------- */
 /* ---------------------------- Registration Page ---------------------------------------------- */
 
 .background {
