--- a/Style.css
+++ b/Style.css
@@ -240,12 +240,12 @@ td {
 
 .table1
 {
-    border-radius:10px;
+    border-radius:30px;
     height:80%;
     width:40%;
-    background-color:;
+    background-color: White;
     margin-left:80%;
-    margin-top:10%;
+    margin-top:15%;
     margin-bottom:10%;
 
 }
@@ -262,17 +262,17 @@ td {
 {
     background-color:#3b444b;
     margin-left:5%;
-    height:10%;
+    height:20%;
     width:90%;
     border-radius:10px;
     color:#A9A9A9;
     font-weight:Bold;
     font-size:150%;
     background-color:White;
-    padding-top: 1%;
-    padding-right: 1%;
-    padding-bottom: 1%;
-    padding-left: 1%;
+    padding-top: 2.5%;
+    padding-right: 2.5%;
+    padding-bottom: 2.5%;
+    padding-left: 2.5%;
 }
 
 .Sign1
