--- a/Style.css
+++ b/Style.css
@@ -141,10 +141,9 @@ input[type=text]:focus {
 /* --------------------------------------------------------------------------------------------- */
 /* ----------------------------------- Index Page ---------------------------------------------- */
 
-
-
-
-
+.Container{
+    
+}
 
 
 
