podi athal akak gaththa.....

--- a/Style.css
+++ b/Style.css
@@ -251,12 +251,12 @@ td {
 .table1
 {
     border-radius:30px;
-    height:80%;
+    height:;
     width:40%;
     background-color: White;
     margin-left:80%;
     margin-top:15%;
-    margin-bottom:10%;
+    margin-bottom:0%;
 
 }
 
