--- a/Style.css
+++ b/Style.css
@@ -143,11 +143,8 @@ input[type=text]:focus {
 /* --------------------------------------------------------------------------------------------- */
 /* ----------------------------------- Index Page ---------------------------------------------- */
 
-.main {
-    z-index: -1;
-}
-/* ----- Slideshow Gallery ----- */
 
+/* ----- Slideshow Gallery ----- */
 /* Position the image container (needed to position the left and right arrows) */
 .slideshow {
   position: relative;
@@ -172,7 +169,7 @@ input[type=text]:focus {
   width: auto;
   padding: 16px;
   margin-top: -50px;
-  color: white;
+  color: #2a2a57;
   font-weight: bold;
   font-size: 20px;
   border-radius: 0 3px 3px 0;
@@ -190,6 +187,7 @@ input[type=text]:focus {
 .prev:hover,
 .next:hover {
   background-color: rgba(0, 0, 0, 0.8);
+  color: white;
 }
 
 /* Number text (1/3 etc) */
@@ -204,7 +202,7 @@ input[type=text]:focus {
 /* Container for image text */
 .caption-container {
   text-align: center;
-  background-color: #222;
+  background-color: #2a2a57;
   padding: 2px 16px;
   color: white;
 }
