--- a/Style.css
+++ b/Style.css
@@ -168,7 +168,7 @@ input[type=text]:focus {
   top: 40%;
   width: auto;
   padding: 16px;
-  margin-top: -50px;
+  margin-top: -100px;
   color: #2a2a57;
   font-weight: bold;
   font-size: 20px;
@@ -205,6 +205,7 @@ input[type=text]:focus {
   background-color: #2a2a57;
   padding: 2px 16px;
   color: white;
+  margin-top: -5px;
 }
 
 .row:after {
@@ -227,6 +228,18 @@ input[type=text]:focus {
 .active,
 .demo:hover {
   opacity: 1;
+}
+
+.container {
+    position: relative;
+    width: 100%;
+    height: 50vh;
+    top: -20px;
+}
+
+.container h1{
+    padding-top: 10px;
+    text-align: center;
 }
 
 
