--- a/Style.css
+++ b/Style.css
@@ -235,6 +235,7 @@ input[type=text]:focus {
     width: 100%;
     height: 50vh;
     top: -20px;
+    text-align: center;
 }
 
 .container h1{
@@ -254,13 +255,12 @@ input[type=text]:focus {
     font-weight: 500;
     color: #2a2a57;
     font-size: x-large;
-    margin-left: 44%;
     opacity: 1;
 }
 
 .container a:hover{
     text-decoration: none;
-    opacity: 0.7;
+    opacity: 0.9;
 
 }
 
