--- a/Style.css
+++ b/Style.css
@@ -260,10 +260,32 @@ input[type=text]:focus {
 
 .container a:hover{
     text-decoration: none;
-    opacity: 0.9;
+    opacity: 0.8;
 
 }
 
+/* ----- Image Gallery ----- */
+div.gallery {
+    margin: 5px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 300px;
+    margin-left: 27px;
+}
+
+div.gallery:hover {
+    border: 1px solid #777;
+}
+
+div.gallery img {
+    width: 100%;
+    height: auto;
+}
+
+div.desc {
+    padding: 15px;
+    text-align: center;
+}
 
 
 /* --------------------------------------------------------------------------------------------- */
