--- a/Style.css
+++ b/Style.css
@@ -186,7 +186,7 @@ input[type=text]:focus {
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover,
 .next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: #2a2a57;
   color: white;
 }
 
