--- a/Style.css
+++ b/Style.css
@@ -139,6 +139,9 @@ input[type=text]:focus {
     width: 100%;
 }
 
+/* ----- Footer ----- */
+
+
 
 /* --------------------------------------------------------------------------------------------- */
 /* ----------------------------------- Index Page ---------------------------------------------- */
