--- a/Style.css
+++ b/Style.css
@@ -334,7 +334,7 @@ div.desc {
 
 .Content {
     margin-top: 1%;
-    background-color:#C0C0C0; 
+    background-color: white; 
     color:  #000000;
     padding: 10px;
     margin-left:60%;
