--- a/Style.css
+++ b/Style.css
@@ -475,7 +475,7 @@ td {
 /*--------------------------------------------------------------------------------------------*/
 /*--------------------------------------- Admin & User Page ----------------------------------*/
 
-.new_btn input[type=text] {
+.new_btn input[type=text], select {
     width: 50%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -497,71 +497,7 @@ td {
 
 }
 
-.new_btn input[type=text]:focus {
+.new_btn input[type=text]:focus, select:focus {
     width: 65%;
 }
 
-/* -------Custom Radio Button ------- */
-/* The Radio container */
-.radio {
-    display: block;
-    position: relative;
-    padding-left: 35px;
-    margin-bottom: 12px;
-    cursor: pointer;
-    font-size: 22px;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-
-/* Hide the browser's default radio button */
-.radio input {
-    position: absolute;
-    opacity: 0;
-    cursor: pointer;
-}
-
-/* Create a custom radio button */
-.checkmark {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 25px;
-    width: 25px;
-    background-color: #eee;
-    border-radius: 50%;
-}
-
-/* On mouse-over, add a grey background color */
-.radio:hover input ~ .checkmark {
-    background-color: #ccc;
-}
-
-/* When the radio button is checked, add a blue background */
-.radio input:checked ~ .checkmark {
-    background-color: #2196F3;
-}
-
-/* Create the indicator (the dot/circle - hidden when not checked) */
-.checkmark:after {
-    content: "";
-    position: absolute;
-    display: none;
-}
-
-/* Show the indicator (dot/circle) when checked */
-.radio input:checked ~ .checkmark:after {
-    display: block;
-}
-
-/* Style the indicator (dot/circle) */
-.radio .checkmark:after {
-    top: 9px;
-    left: 9px;
-    width: 8px;
-    height: 8px;
-    border-radius: 50%;
-    background: white;
-}
