--- a/Style.css
+++ b/Style.css
@@ -307,10 +307,12 @@ div.desc {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100%;
+    min-height: 100%;
+    min-width: 1024px;
 
     /* Set up proportionate scaling */
     width: 100%;
+    height: auto;
     
     /* Set up positioning */
     position: fixed;
@@ -320,6 +322,8 @@ div.desc {
 }
 
 .Content {
+    margin-top: 1%;
+    background-color:; 
     color:  #000000;
     padding: 10px;
     margin-right: 10%;
@@ -330,6 +334,7 @@ div.desc {
     border: none;
     outline: none;
     overflow: hidden;
+
 }
 
 h3 {
