--- a/Style.css
+++ b/Style.css
@@ -588,3 +588,81 @@ td {
     padding: 0;
     background-size: cover;
 }
+
+/*--------------------------------------------------------------------------------------------*/
+/*---------------------------------------------- Otp Page ----------------------------------*/
+
+#bodysignin1
+{
+    background: url("Images/Background/FogotNoFeeling.jpg");
+    margin: 0;
+    padding: 0;
+    background-size: cover;
+}
+
+.table1
+{
+   width: 25%;
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   color: white;
+}
+
+.head1
+{
+    
+    float: center;
+    font-size: 40px
+    border-bottom: 6px solid #4caf50;
+    margin-bottom: 50px;
+    padding: 13px 0;
+    
+}
+
+.text1
+{
+   width: 100%;
+   overflow: hidden;
+   font-size: 20px;
+   padding: 8px 0;
+   margin: 8px 0;
+   border-bottom: 1px solid #4caf50;
+   border: none;
+   outline: none;
+   font-size: 18px;
+   width: 320px;
+   margin: 10px;
+
+}
+
+.Sign1
+{
+    width: 100%;
+    background: none;
+    border: 1px solid;
+    color: white;
+    padding: 5px; 
+    font-size: 18px;
+    cursor: pointer;
+    margin: 10px 0;
+
+}
+.Sign2
+{
+    font-weight:Bold;
+    margin-left:7%;
+    border-radius:10px;
+    height:10%;
+    width:40%;
+    background-color:#1E90FF;
+    color:White;
+    font-size:150%;
+}
+
+.click
+{
+    color:Red;
+    font-weight:Bold;
+}
