--- a/Style.css
+++ b/Style.css
@@ -643,10 +643,11 @@ td {
     width: 100%;
     background: none;
     border: 1px solid;
-    color: white;
+    color: Red;
     padding: 5px; 
     font-size: 18px;
     cursor: pointer;
     margin: 10px 0;
+    font-weight: Bold;
 
 }
